--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
     <% if alert %>
   <p class="alert alert-danger"><%= alert %></p>
     <% end %>
+    <%= render "layouts/header" %>
+    <div class="top">
     <%= yield %>
+    </div>
+
   </body>
 </html>
