--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -7,14 +7,16 @@ width: 45rem;
 margin: auto;
 border-radius: 10px;
 display: block;
-top: 100px;
 }
 
 .card-deck{
   width: 45rem;
   margin: auto;
-
 }
+.top{
+	margin-top: 100px;
+}
+
 
 .my_pic{
 width: 500px;
