--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -17,7 +17,9 @@ display: block;
 	margin-top: 100px;
 }
 
-
+.container_login-container{
+	margin-left: 20px;
+}
 .my_pic{
 width: 500px;
 height: auto;
