--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,15 +10,15 @@
      <a class="nav-link" href="#"> Top Rated</a>
    </li>
    <li class="nav-item">
-     <a class="nav-link" href="#">Promotions</a>
+     <a class="nav-link" href="">Manage your Space</a>
    </li>
    <li class="nav-item">
-     <a class="nav-link" href="/coworkingspaces/new">Rent your Space</a>
+     <a class="nav-link" href="/coworkingspaces/new">Create your Space</a>
    </li>
    <!-- Dropdown -->
    <li class="nav-item dropdown">
      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-       Coworking Spaces
+       Book Spaces
      </a>
      <div class="dropdown-menu">
        <a class="dropdown-item" href="#">Desks</a>
