--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -3,14 +3,14 @@ body{
 	margin: 0;
 }
 .card{
-width: 45rem;
+width: 25rem;
 margin: auto;
 border-radius: 10px;
 display: block;
 }
 
 .card-deck{
-  width: 45rem;
+  width: 30rem;
   margin: auto;
 }
 .top{
@@ -21,14 +21,19 @@ display: block;
 	margin-left: 20px;
 }
 .my_pic{
-width: 500px;
+width: 300px;
 height: auto;
 display: block;
 margin-left: auto;
 margin-right: auto;
 width: 45%;
 }
-
+.header_image{
+ border-radius: 10px;
+ margin-top: -50px;
+ width: 100%;
+ height: 650px;
+}
 
 .post_text{
   width: 200px;
@@ -39,4 +44,5 @@ width: 45%;
 
 .card-img-top{
 border-radius: 10px;
+height: 300px;
 }
