--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,16 @@
-<div class = "container_login-container"><h2>Sign up</h2>
-
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<section class = "form-auth text-center">
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <hi class = "h3 mb-3 font-weight-normal"> Please Sign Up </h1>
     <%= render "devise/shared/error_messages", resource: resource %>
-
-    <div class="field">
-      <%= f.label :username %><br />
-      <%= f.text_field :username %>
-    </div>
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password %>
+      <%= f.text_field :username, autofocus: true, class: "form-control", placeholder: "Username" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder:"Email" %>
       <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "Password" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "Password Confirmation" %>
+    <button class = "btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+<% end %>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "Sign up" %>
-    </div>
-  <% end %>
-</div>
-  <%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+  </section>
