--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,11 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+
  <!-- Brand -->
  <a class="navbar-brand" href="#"><h3>BookSpace</h3></a>
  <!-- Links -->
  <ul class="navbar-nav">
    <li class="nav-item">
      <a class="nav-link" href="/coworkingspaces/">Home</a>
-   </li>
-   <li class="nav-item">
-     <a class="nav-link" href="#"> Top Rated</a>
    </li>
    <li class="nav-item">
      <a class="nav-link" href="">Manage your Space</a>
@@ -29,6 +27,11 @@
    <!-- Log Out -->
     <li class="nav-item">
      <a class = "nav-link" <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-   </li>
+    </li>
+    <!-- Search Bar -->
+    <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
   </ul>
   </nav>
