--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<section class = "form-auth text-center">
+<section class = "forms text-center">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <hi class = "h3 mb-3 font-weight-normal"> Please Sign Up </h1>
     <%= render "devise/shared/error_messages", resource: resource %>
