--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -46,3 +46,14 @@ width: 45%;
 border-radius: 10px;
 height: 300px;
 }
+
+.forms{
+	width: 200%;
+	max-width: 500px;
+	padding: 15px;
+	margin: auto;
+	margin-top: 60px;
+	border-style: solid;
+  border-color: grey;
+	border-width: 0.5px;
+}
