--- a/app/views/coworkingspaces/new.html.erb
+++ b/app/views/coworkingspaces/new.html.erb
@@ -1,8 +1,11 @@
-<%= form_with model: @coworkingspace do |f| %>
-<div> Name: <%= f.text_field :name,required: true %> </div>
-<div> Image: <%= f.file_field :pic, required: true %> </div>
-<div> Address: <%= f.text_area :address, required: true %> </div>
-<div> City: <%= f.text_field :city, required: true %> </div>
-<div> Amount of Spaces: <%= f.text_field :spaces_qty,required: true %> </div>
-<%= f.submit %>
-<%end%>
+<section class = "forms text-center">
+  <p class="h4 mb-4">Create a Coworking Space</p>
+    <%= form_with model: @coworkingspace do |f| %>
+    <div> Name: <%= f.text_field :name,required: true, class:"form-control mb-4"  %> </div>
+    <div> Image: <%= f.file_field :pic, required: true, class:"form-control mb-4" %> </div>
+    <div> Address: <%= f.text_area :address, required: true, class:"form-control mb-4"  %> </div>
+    <div> City: <%= f.text_field :city, required: true, class:"form-control mb-4"  %> </div>
+    <div> Amount of Spaces: <%= f.text_field :spaces_qty,required: true, class:"form-control mb-4"  %> </div>
+    <p><div><button class = "btn btn-info btn-block" type="submit">Create</button></div></p>
+    <%end%>
+</section>
