Fixed Room Pages

--- a/app/views/coworkingspaces/new.html.erb
+++ b/app/views/coworkingspaces/new.html.erb
@@ -5,7 +5,7 @@
     <div> Image: <%= f.file_field :pic, required: true, class:"form-control mb-4" %> </div>
     <div> Address: <%= f.text_area :address, required: true, class:"form-control mb-4"  %> </div>
     <div> City: <%= f.text_field :city, required: true, class:"form-control mb-4"  %> </div>
-    <div> Amount of Spaces: <%= f.text_field :spaces_qty,required: true, class:"form-control mb-4"  %> </div>
+    <div> Total Spaces: <%= f.text_field :spaces_qty,required: true, class:"form-control mb-4"  %> </div>
     <p><div><button class = "btn btn-info btn-block" type="submit">Create</button></div></p>
     <%end%>
 </section>
