--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,3 +1,20 @@
-<p><% @roomlist.each do |r| %> </p>
-<%= image_tag(r.pic, class: "card-img-top" ) if r.pic.attached? %>
-<%end%>
+<div class="d-flex justify-content-center text-center">
+  <p><% @roomlist.each do |r| %> </p>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Free</h4>
+          </div>
+          <div class="card-body">
+            <%= image_tag(r.pic, class: "card-img-top" ) if r.pic.attached? %>
+            <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>High Speed Internet</li>
+              <li>Private Desk</li>
+              <li>Email support</li>
+              <li>Help center access</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Book</button>
+          </div>
+        </div>
+        <%end%>
+</div>
