--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -21,8 +21,8 @@ display: block;
 	margin-left: 20px;
 }
 .my_pic{
-width: 300px;
-height: auto;
+width: 50px;
+height: 50px;
 display: block;
 margin-left: auto;
 margin-right: auto;
@@ -48,8 +48,8 @@ height: 300px;
 }
 
 .forms{
-	width: 200%;
-	max-width: 500px;
+	width: 300%;
+	max-width: 600px;
 	padding: 15px;
 	margin: auto;
 	margin-top: 60px;
@@ -60,4 +60,9 @@ height: 300px;
 
 .alert{
 	position: absolute;
+}
+
+.d-flex{
+	display: grid;
+	flex-wrap: wrap;
 }
