--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,8 @@
      <a class="nav-link" href="/coworkingspaces/">Home</a>
    </li>
    <li class="nav-item">
-     <a class="nav-link" href="">Manage your Space</a>
+     
+     <a class="nav-link"></a>
    </li>
    <li class="nav-item">
      <a class="nav-link" href="/coworkingspaces/new">Create your Space</a>
