--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -2,19 +2,19 @@
   <p><% @roomlist.each do |r| %> </p>
         <div class="card mb-4 box-shadow">
           <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Free</h4>
           </div>
           <div class="card-body">
             <%= image_tag(r.pic, class: "card-img-top" ) if r.pic.attached? %>
-            <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+            <h1 class="card-title pricing-card-title">$ <small class="text-muted">/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
               <li>High Speed Internet</li>
               <li>Private Desk</li>
               <li>Email support</li>
               <li>Help center access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Book</button>
+
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary"><%= button_to "Book", "/coworkingspaces/1/reservations/new", :method => "get", class: "btn btn-lg btn-block primary"  %></button>
           </div>
         </div>
-        <%end%>
+    <%end%>
 </div>
