--- a/app/views/coworkingspaces/index.html.erb
+++ b/app/views/coworkingspaces/index.html.erb
@@ -4,7 +4,7 @@
   <div class="d-flex justify-content-center">
     <div><h1 class="display-3">Welcome to BookSpace</h1>
     <p> Book a desk, open space or meetings rooms through our portal.</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button"> View Spaces»</a></p>
+    <p><a class="btn btn-primary btn-lg" href="/all_spaces/" role="button"> View All Spaces Available»</a></p>
     </div>
   </div>
 </div>
