--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,13 @@
 <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
 
  <!-- Brand -->
- <a class="navbar-brand" href="#"><h3>BookSpace</h3></a>
+ <%= link_to image_tag("desk.png", alt: "logo", size:"75x75"), '/' %>
+ <a class="navbar-brand" href="/coworkingspaces/"><h3>BookSpace</h3></a>
+
  <!-- Links -->
  <ul class="navbar-nav">
    <li class="nav-item">
      <a class="nav-link" href="/coworkingspaces/">Home</a>
-   </li>
-   <li class="nav-item">
-     
-     <a class="nav-link"></a>
    </li>
    <li class="nav-item">
      <a class="nav-link" href="/coworkingspaces/new">Create your Space</a>
@@ -29,10 +27,6 @@
     <li class="nav-item">
      <a class = "nav-link" <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     </li>
-    <!-- Search Bar -->
-    <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+
   </ul>
   </nav>
